# FSearch

./: .gitignore  README.md
FSearch/: CMakeLists.txt
FSearch/include/: setupCurlCjson.h  utils.h
FSearch/json_report/: AiReport.json  searchReport.json
FSearch/src/: main.c  setupCurlCjson.c  utils.c
